Fix small media edit page layout issues

--- a/server/src/html/style/main.css
+++ b/server/src/html/style/main.css
@@ -1136,6 +1136,7 @@ input[type=checkbox] {
 	display:block;
 	margin-left: auto;
 	margin-right: auto;
+	width: 100%;
 }
 
 .controlButton {
